# palate

./: .env.example  .gitignore  README.md  USER-GUIDE.md  initial-idea.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-local.yml
deploy/: README.md  com.palate.mcp.plist  com.palate.prod.plist  deploy-local.sh  install-github-runner.sh
palate/: __init__.py  backup.py  core.py  eval.py  google_drive.py  llm.py  media.py  oauth.py  omdb.py  schema.py  seed.py  server.py  storage.py
server/: core.js  core.test.js  index.js  llm.js  schema.js  seed.js  storage.js
tests/: test_api_affordance.py  test_backup.py  test_core.py  test_eval.py  test_google_drive.py  test_llm.py  test_media.py  test_oauth.py  test_omdb.py  test_server.py  test_storage.py  test_user_guide_flows.py
